[workspace]
resolver = "2"
members = [
    "block-time",
    "essentials",
    "jaeger",
    "kvdb",
    "parachain-tracer",
    "priority-channel",
    "whois",
]

[workspace.package]
version = "0.2.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paritytech/polkadot-introspector"

[workspace.dependencies]
async-channel = "1.9.0"
async-trait = "0.1.74"
bincode = "1.3.3"
clap = { version = "4.4.8", features = ["derive"] }
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["derive", "full", "bit-vec"] }
color-eyre = "0.6.2"
colored = "2.0.4"
crossterm = "0.26.1"
env_logger = "0.10.1"
erased-serde = "0.3.31"
futures = "0.3.29"
futures-util = "0.3.27"
hex = "0.4.3"
itertools = "0.10.5"
log = "0.4.20"
mockall = "0.11.4"
parity-db = "0.4.12"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "master" }
rand = "0.8.5"
rasciigraph = "0.2.0"
reqwest = { version = "0.11.22" }
rocksdb = "0.21.0"
serde = "1.0.193"
serde_bytes = "0.11.12"
serde_derive = "1.0.138"
serde_json = "1.0.107"
serde_urlencoded = "0.7.1"
snap = "1.1.0"
strum = { version = "0.25.0", features = ["derive"] }
subxt = { default-features = false, features = ["jsonrpsee", "native"], version = "0.32.1" }
base64 = "0.21.5"
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["formatting"] }
tokio = { version = "1.34.0", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
typed-builder = "0.14.0"
url = "2.4.1"
warp = { version = "0.3.6", features = ["tls"] }

polkadot-introspector-essentials = { path = "essentials" }
polkadot-introspector-priority-channel = { path = "priority-channel" }
