[workspace]
resolver = "2"
members = [
    "block-time",
    "essentials",
    "jaeger",
    "kvdb",
    "parachain-tracer",
    "priority-channel",
    "whois",
]

[workspace.package]
version = "0.2.34"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paritytech/polkadot-introspector"

[workspace.dependencies]
async-channel = "2.3.1"
async-trait = "0.1.83"
bincode = "1.3.3"
clap = { version = "4.5.21", features = ["derive"] }
parity-scale-codec = { version = "3.7.0", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
color-eyre = "0.6.3"
colored = "2.1.0"
crossterm = "0.26.1"
env_logger = "0.10.2"
erased-serde = "0.3.31"
futures = "0.3.31"
futures-util = "0.3.27"
hex = "0.4.3"
itertools = "0.12.1"
log = "0.4.22"
mockall = "0.11.4"
parity-db = "0.4.13"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
rand = "0.8.5"
rasciigraph = "0.2.0"
reqwest = { version = "0.11.27" }
rocksdb = "0.21.0"
serde = "1.0.210"
serde-binary = "0.5"
serde_bytes = "0.11.15"
serde_derive = "1.0.138"
serde_json = "1.0.128"
serde_urlencoded = "0.7.1"
snap = "1.1.1"
ss58-registry = { version = "1.51.0", default-features = false }
strum = { version = "0.25.0", features = ["derive"] }
subxt = { default-features = false, features = [
    "jsonrpsee",
    "native",
    "unstable-light-client",
], version = "0.38.0" }
base64 = "0.22.1"
thiserror = "1.0.69"
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1.38.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
typed-builder = "0.14.0"
url = "2.5.2"
warp = { version = "0.3.7", features = ["tls"] }

polkadot-introspector-essentials = { path = "essentials" }
polkadot-introspector-priority-channel = { path = "priority-channel" }
