[package]
name = "polkadot-block-time"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
color-eyre = "0.6.2"
colored = "2.0.0"
crossterm = "0.26.1"
env_logger = "0.10.0"
log = "0.4.17"
polkadot-introspector-essentials = { path = "../essentials" }
polkadot-introspector-priority-channel = { path = "../priority-channel" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "master" }
rasciigraph = "0.2.0"
subxt = { default-features = false, features = ["jsonrpsee-ws"], version = "0.28.0" }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "signal"] }
