[package]
name = "polkadot-block-time"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
colored = { workspace = true }
crossterm = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
polkadot-introspector-essentials = { workspace = true }
polkadot-introspector-priority-channel = { workspace = true }
prometheus-endpoint = { workspace = true }
rasciigraph = { workspace = true }
subxt = { workspace = true }
tokio = { workspace = true }
