[package]
name = "polkadot-introspector-essentials"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
async-trait = "0.1.66"
clap = { version = "4.2.7", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive", "full", "bit-vec"] }
color-eyre = "0.6.2"
env_logger = "0.10.0"
futures = "0.3.27"
futures-util = "0.3.27"
hex = "0.4.3"
itertools = "0.10.5"
log = "0.4.17"
polkadot-introspector-priority-channel = { path = "../priority-channel" }
rand = "0.8.5"
serde = "1.0.163"
serde_bytes = "0.11.9"
serde_derive = "1.0.138"
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
strum = { version = "0.24.1", features = ["derive"] }
subxt = { default-features = false, features = ["jsonrpsee-ws"], version = "0.28.0" }
thiserror = "1.0.39"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
typed-builder = "0.14.0"
url = "2.3.1"
warp = { version = "0.3.5", features = ["tls"] }

[features]
rococo = []
polkadot = []
