[package]
name = "polkadot-introspector-essentials"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
parity-scale-codec = { workspace = true }
color-eyre = { workspace = true }
dyn-clone = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
polkadot-introspector-priority-channel = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
strum = { workspace = true }
subxt = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
typed-builder = { workspace = true }
url = { workspace = true }
warp = { workspace = true }
