[package]
name = "polkadot-introspector"
version = "0.1.3"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
color-eyre = "0.6.2"
clap = { version = "4.2.3", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
subxt = { default-features = false, features = ["jsonrpsee-ws"], version = "0.28.0" }
tokio = { version = "1.27.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
thiserror = "1.0.39"
typed-builder = "0.14.0"
futures = "0.3.28"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "master" }
warp = { version = "0.3.4", features = ["tls"] }
reqwest = { version = "0.11.16" }
rasciigraph = "0.2.0"
crossterm = "0.26.1"
colored = "2.0.0"
serde = "1.0.160"
serde_json = "1.0.96"
serde_derive = "1.0.138"
serde_bytes = "0.11.9"
serde_urlencoded = "0.7.1"
bincode = "1.3.3"
async-trait = "0.1.66"
strum = { version = "0.24.1", features = ["derive"] }
itertools = "0.10.5"
rand = "0.8.5"
time = { version = "0.3.20", features = ["formatting"] }
priority-channel = { path = "../priority-channel" }
essentials = { path = "../essentials" }
