[package]
name = "polkadot-jaeger"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
color-eyre = "0.6.2"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
polkadot-introspector-essentials = { path = "../essentials" }
reqwest = { version = "0.11.17" }
serde = "1.0.162"
serde_bytes = "0.11.9"
serde_derive = "1.0.138"
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "signal"] }
typed-builder = "0.14.0"
