[package]
name = "polkadot-jaeger"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
base64 = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
polkadot-introspector-essentials = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
tokio = { workspace = true }
typed-builder = { workspace = true }
