[package]
name = "polkadot-kvdb"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
color-eyre = "0.6.2"
clap = { version = "4.2.2", features = ["derive"] }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "master" }
rocksdb = "0.20.1"
parity-db = "0.4.4"
serde = "1.0.160"
serde_json = "1.0.96"
serde_derive = "1.0.138"
serde_bytes = "0.11.9"
serde_urlencoded = "0.7.1"
bincode = "1.3.3"
erased-serde = "0.3.25"
itertools = "0.10.5"
hex = "0.4.3"
snap = "1.1.0"
futures = "0.3.28"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.27.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
essentials = { path = "../essentials" }
