[package]
name = "polkadot-kvdb"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.4", features = ["derive"] }
color-eyre = "0.6.2"
env_logger = "0.10.0"
erased-serde = "0.3.25"
futures = "0.3.28"
hex = "0.4.3"
itertools = "0.10.5"
log = "0.4.19"
parity-db = "0.4.8"
polkadot-introspector-essentials = { path = "../essentials" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "master" }
rand = "0.8.5"
rocksdb = "0.21.0"
serde = "1.0.164"
serde_bytes = "0.11.9"
serde_derive = "1.0.138"
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
snap = "1.1.0"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
