[package]
name = "polkadot-kvdb"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
bincode = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
erased-serde = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
parity-db = { workspace = true }
polkadot-introspector-essentials = { workspace = true }
prometheus-endpoint = { workspace = true }
rand = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
snap = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
