[package]
name = "polkadot-metadata-checker"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.26.1"
env_logger = "0.10.0"
log = "0.4.17"
polkadot-introspector-essentials = { path = "../essentials" }
subxt = { default-features = false, features = ["jsonrpsee-ws"], version = "0.28.0" }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "signal"] }
