[package]
name = "polkadot-metadata-checker"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.26.1"
env_logger = "0.10.0"
log = "0.4.18"
polkadot-introspector-essentials = { path = "../essentials" }
subxt = { default-features = false, features = ["jsonrpsee-ws"], version = "0.28.0" }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
