[package]
name = "polkadot-metadata-checker"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
crossterm = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
polkadot-introspector-essentials = { workspace = true }
subxt = { workspace = true }
tokio = { workspace = true }
