[package]
name = "polkadot-parachain-tracer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
async-trait = "0.1.66"
clap = { version = "4.3.2", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive", "full", "bit-vec"] }
color-eyre = "0.6.2"
colored = "2.0.0"
crossterm = "0.26.1"
env_logger = "0.10.0"
futures = "0.3.28"
itertools = "0.10.5"
log = "0.4.18"
polkadot-introspector-essentials = { path = "../essentials" }
polkadot-introspector-priority-channel = { path = "../priority-channel" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "master" }
rand = "0.8.5"
serde = "1.0.164"
serde_bytes = "0.11.9"
serde_derive = "1.0.138"
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
strum = { version = "0.24.1", features = ["derive"] }
subxt = { default-features = false, features = ["jsonrpsee-ws"], version = "0.29.0" }
thiserror = "1.0.39"
time = { version = "0.3.22", features = ["formatting"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
typed-builder = "0.14.0"
warp = { version = "0.3.5", features = ["tls"] }
