[package]
name = "polkadot-parachain-tracer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
codec = { workspace = true }
color-eyre = { workspace = true }
colored = { workspace = true }
crossterm = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
polkadot-introspector-essentials = { workspace = true }
polkadot-introspector-priority-channel = { workspace = true }
prometheus-endpoint = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
strum = { workspace = true }
subxt = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
typed-builder = { workspace = true }
warp = { workspace = true }
