[package]
name = "polkadot-introspector-priority-channel"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Channels with message prioritization"
repository = "https://github.com/paritytech/polkadot-introspector.git"
license = "MIT OR Apache-2.0"

[dependencies]
async-channel = "1.8.0"
futures = "0.3.28"
rand = "0.8.5"
thiserror = "1.0.31"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["macros", "rt"] }
