[package]
name = "polkadot-introspector-priority-channel"
description = "Channels with message prioritization"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
async-channel = "1.8.0"
futures = "0.3.28"
rand = "0.8.5"
thiserror = "1.0.31"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["macros", "rt"] }
