[package]
name = "polkadot-introspector-priority-channel"
description = "Channels with message prioritization"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
async-channel = { workspace = true }
futures = { workspace = true }
pin-project-lite = "0.2.16"
rand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
