[package]
name = "polkadot-whois"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
polkadot-introspector-essentials = { workspace = true }
polkadot-introspector-priority-channel = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = {workspace = true }
serde_json = {workspace = true }
itertools = "0.13"
serde-binary = "0.5"
hex = "0.4.3"
subp2p-explorer-cli = { path = "../../subp2p-explorer-use/cli"}
subp2p-explorer = { path = "../../subp2p-explorer-use/subp2p-explorer"}

libp2p = { version = "0.52.0", features = ["dns", "identify", "kad", "macros", "mdns", "noise", "ping", "tcp",  "tokio", "yamux", "websocket", "request-response"] }
