[package]
name = "polkadot-whois"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
polkadot-introspector-essentials = { workspace = true }
polkadot-introspector-priority-channel = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = {workspace = true }
serde_json = {workspace = true }
ss58-registry = {workspace = true }
itertools = {workspace = true }
serde-binary = {workspace = true }
hex = {workspace = true }
subp2p-explorer-cli = { git = "https://github.com/alexggh/subp2p-explorer", branch="alexggh/make-subp2p-usable-as-library"}
subp2p-explorer = { git = "https://github.com/alexggh/subp2p-explorer", branch="alexggh/make-subp2p-usable-as-library"}

libp2p = { version = "0.52.4", features = ["dns", "identify", "kad", "macros", "mdns", "noise", "ping", "tcp",  "tokio", "yamux", "websocket", "request-response"] }
